# Face_Detection

./: .gitignore  README.md  docker-compose.yml  fix_content_type.py  insert_cams.py  make_bucket_public.py  requirements.txt  setup_background_services.sh  test_minio.py  update_frontend_urls.py  upload_to_minio.py
Machine_code/: Dockerfile  auth.py  main.py  pyproject.toml  sync_employees.py
Machine_code/config/: settings.py
Machine_code/core/: __init__.py  clickhouse_manager.py  create_embeddings.py  detection_logger.py  face_recognition.py  image_saver.py  minio_uploader.py
Machine_code/threads/: __init__.py  display.py  stream_processor.py
backend/: Dockerfile  README.md  pyproject.toml  schema.sql  test_logs.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: security.py
backend/app/models/: camera.py  employee.py  face_mapping.py  movement_log.py  user.py
backend/app/routers/: __init__.py  auth.py  cameras.py  dashboard.py  detections.py  employees.py  face_mapping.py  image_proxy.py  movement_logs.py  reports.py  settings.py  users.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  AppSidebar.tsx  ConfidenceBadge.tsx  DataDelayBanner.tsx  EmptyState.tsx  LoadingScreen.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx  RoleContext.tsx
frontend/src/lib/: api.ts  queryKeys.ts  utils.ts
frontend/src/pages/: CameraManagement.tsx  Dashboard.tsx  EmployeeDirectory.tsx  (+7 more)
(+1 files in other folders)
