[project]
name = "attendance-machine-code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "insightface>=0.7.3",
    "faiss-cpu>=1.7.4",
    "onnxruntime>=1.16.0",
    "boto3>=1.43.21",
    "clickhouse-connect>=0.15.1",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=3.2.2",
    "python-dotenv>=1.0.1",
    "openpyxl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "threads", "config"]
