[project]
name = "attendance-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "clickhouse-connect>=0.7.19",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "faker>=28.4.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "boto3>=1.43.21",
    "openpyxl>=3.1.0",
    "reportlab>=4.5.1",
    "bcrypt==3.2.2",
    "pandas"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
